# just-printing-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.中文.md  compose.yaml  index.html  justfile  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  logging_config.py  main.py  models.py  routes.py  services.py
backend/services/: __init__.py  auth.py  file_handler.py  printer.py  session.py
frontend/: app.js  index.html  styles.css
